membuat ui untuk mobile

--- a/index.html
+++ b/index.html
@@ -5,11 +5,13 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>Note Apps</title>
+    <link rel="stylesheet" href="./app/styles/main.css">
 </head>
 
 <body>
     <div id="content">
-        <note-header></note-header>
+        <note-header>
+        </note-header>
         <!-- Custom note extends div Element-->
         <div is="my-notes"></div>
         <form action="">
