mengupdate style ui

--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>Note Apps</title>
     <link rel="stylesheet" href="./app/styles/main.css">
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.min.css">
 </head>
 
 <body>
@@ -14,16 +15,6 @@
         </note-header>
         <!-- Custom note extends div Element-->
         <div is="my-notes"></div>
-        <form action="">
-            <note-text-input>
-
-            </note-text-input>
-            <note-text-input>
-
-            </note-text-input>
-            <button type="reset">Batal</button>
-            <button type="submit">Simpan</button>
-        </form>
     </div>
     <script type="module" src="./main.js"></script>
 </body>
