menambah responsif untuk desktop

--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>Note Apps</title>
     <link rel="stylesheet" href="./app/styles/main.css">
-    <link rel="stylesheet" href="./app/styles/768px.css" media="min-width: 768px">
+    <link rel="stylesheet" href="./app/styles/768px.css" media="screen and (min-width: 768px)">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.min.css">
 </head>
 
@@ -14,9 +14,7 @@
     <div id="content">
         <note-header></note-header>
         <!-- Custom note extends div Element-->
-        <div is="my-notes">
-            <note-header></note-header>
-        </div>
+        <div is="my-notes"></div>
     </div>
     <script type="module" src="./main.js"></script>
 </body>
